@@ -1,3 +1,7 @@
+7 August 2012: Matthijs
+- Fix serial check, so that signer does not retry fetch a newer zone if
+  serial on disk and serial in memory are equal.
+
 6 August 2012: Matthijs
 - Replace system() function call with execvp().
 
